--- a/404.html
+++ b/404.html
@@ -27,12 +27,12 @@
         <div class="header-title">
             <a href="/" title="HebeHan&#39;s Blog"><img
         class="lazyload logo"
-        src="/svg/loading/small.min.svg"
+        src="/svg/loading.min.svg"
         data-src="/logo.png"
         data-srcset="/logo.png, /logo.png 1.5x, /logo.png 2x"
         data-sizes="auto"
-        alt="HebeHan&#39;s Blog"
-        title="HebeHan&#39;s Blog" />HebeHan<span class="header-title-post"><i class='far fa-kiss-wink-heart fa-fw'></i></span></a>
+        alt="/logo.png"
+        title="/logo.png" />HebeHan<span class="header-title-post"><i class='far fa-kiss-wink-heart fa-fw'></i></span></a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/about/"> 关于 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -58,12 +58,12 @@
             <div class="header-title">
                 <a href="/" title="HebeHan&#39;s Blog"><img
         class="lazyload logo"
-        src="/svg/loading/small.min.svg"
+        src="/svg/loading.min.svg"
         data-src="/logo.png"
         data-srcset="/logo.png, /logo.png 1.5x, /logo.png 2x"
         data-sizes="auto"
-        alt="HebeHan&#39;s Blog"
-        title="HebeHan&#39;s Blog" />HebeHan<span class="header-title-post"><i class='far fa-kiss-wink-heart fa-fw'></i></span></a>
+        alt="/logo.png"
+        title="/logo.png" />HebeHan<span class="header-title-post"><i class='far fa-kiss-wink-heart fa-fw'></i></span></a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
